Fixes video display on mobile

--- a/eebulle.ch/src/pages/index/welcome.scss
+++ b/eebulle.ch/src/pages/index/welcome.scss
@@ -66,6 +66,15 @@
       }
     }
 
+    .left {
+      .video {
+        height: 100%;
+        .video-container {
+          height: 100%;
+        }
+      }
+    }
+
     .right {
       flex: 1;
       flex-direction: row;
